destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: backend-dr
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
