destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr
spec:
  host: frontend
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
