ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: signal-desk
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # / → frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8000
