virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vr
spec:
  hosts:
    - frontend
  http:
    - route:
        - destination:
            host: frontend
            subset: stable
          weight: 10
        - destination:
            host: frontend
            subset: canary
          weight: 90
